﻿2011-06-13 COAH96KoxU <queue glasscore.net>

	* style/style.css,
	  req/Handler/Read.php,
	  req/Visualizer/Read/Success.php: 作品閲覧不可設定時に投稿時エラーとして表示されてしまうのを修正
	* req/Core/Visualizer.php,
	  req/Model/ThreadEntry.php,
	  req/Visualizer/Index/Search.php: 検索が各種非表示設定を反映しないのを修正
	* req/Visualizer/Index/Tag.php: 戻る表記の修正

2011-06-12 COAH96KoxU <queue glasscore.net>

	* release 1
	* req/Visualizer/mobile/Read/Index.php: 携帯表示で概要が正常に表示されないのを修正

2011-06-09 COAH96KoxU <queue glasscore.net>

	* readme.txt: 内容を強化
	* style/style.css: 注釈文のスタイルを調整
	* req/Visualizer/Read/Edit.php: 古いブラウザ向けの表示を追加
	* req/Model/ThreadEntry.php: 検索時にタグおよび Rate が正しく表示されないのを修正
	* config.php,
	  req/Core/Configuration.php,
	  req/Model/SearchIndex.php: 本文を検索索引に登録する設定を追加
	* req/Handler/Index.php: タグが検索できないのを修正
	* req/Visualizer/Index/Index.php,
	  req/Visualizer/Index/Search.php,
	  req/Visualizer/Template/Index.php: 一覧表示を共通化
	* req/Core/Auth.php: 一度パスワードを間違えると次にパスワードが一致しても認証されないのを修正

2011-06-08 COAH96KoxU <queue glasscore.net>

	* config.php,
	  req/Core/Cookie.php,
	  req/Visualizer/Index/Index.php,
	  script/Index/Index.js,
	  script/Read/Index.js,
	  style/style.css: ユーザ側で一覧表示形式を選択可能に

2011-06-07 COAH96KoxU <queue glasscore.net>

	* config.php,
	  req/Core/Auth.php,
	  req/Core/Util.php,
	  req/Handler/Index.php,
	  req/Handler/Read.php,
	  req/Visualizer/Auth.php,
	  req/Visualizer/Index/Index.php,
	  req/Visualizer/Index/Search.php,
	  req/Visualizer/Read/Edit.php,
	  req/Visualizer/Read/Index.php: 認証を補強
	* req/Core/Auth.php: セッションの取り扱いを補強
	* config.php,
	  req/Core/Configuration.php,
	  req/Handler/Read.php: 概要の最大行数と最大サイズを指定する設定を追加
	* style/style.css: レイアウトの調整
	* style/style.css,
	  style/trident.css,
	  style/gecko.css,
	  style/presto.css,
	  style/webkit.css: 縦書き時のレイアウトを調整

2011-06-05 COAH96KoxU <queue glasscore.net>

	* config.php: /config を見ようとすると config.php を見に行ってしまう環境対策に設定情報のリンクに .html を付加
	* config.php,
	  req/Core/Configuration.php,
	  req/Visualizer/Index/Index.php,