@@ -7,6 +7,8 @@
 	  req/Model/ThreadEntry.php,
 	  req/Visualizer/Index/Search.php: 検索が各種非表示設定を反映しないのを修正
 	* req/Visualizer/Index/Tag.php: 戻る表記の修正
+	* req/Handler/Index.php,
+	  req/Visualizer/Index/Tag.php: 作者およびタグの非表示設定を反映しないのを修正
 
 2011-06-12 COAH96KoxU <queue glasscore.net>
 
